# robot-car-app

./: .gitignore  CMakeLists.txt  Dockerfile  aliases.sh  aliases_host.sh  aliases_target.sh  readme.md
pilots/: CMakeLists.txt  readme.md
pilots/project_test_mynteye/: CMakeLists.txt  mynteyed_demo.cpp
pilots/project_test_socket/: client_class.cpp
pilots/project_test_texture/: CMakeLists.txt
pilots/project_test_video/: CMakeLists.txt  main.cpp
pilots/project_test_video/game/: quad_screen.h
source/: CMakeLists.txt  readme.md
source/arduino/arduino_controller/: arduino_controller.ino  arduino_message.h  arduino_types.h  drive_controller.h  imu.h  logger.h  master_connection.h  wit_c_sdk.h
source/arduino/arduino_controller/core/: drive_controller.h  imu.h  master_connection.h
source/arduino/arduino_controller/public/: arduino_types.h
source/arduino_controller/: arduino_controller.ino
source/common/: CMakeLists.txt  client.cpp  client.h  client_handler.cpp  connection.cpp  connection.h  logger.h  message.h  message_handler.h  message_transciever.cpp  message_transciever.h  messages.h  robot.h  server.cpp  server.h  server_handler.cpp
source/libraries/common/: CMakeLists.txt  client.cpp  client_handler.cpp  clock.h  connection.h  data_type.h  drive_controller.h  input.h  input_sink.h  input_source.h  logger.cpp  logger.h  looper.h  message.h  messages.h  pose.h  server_handler.cpp  timer.h  utils.h
source/libraries/control_panel/: CMakeLists.txt  control_panel.cpp  control_panel.h
source/libraries/control_panel/logic/: CMakeLists.txt  camera.h  car.h  depth_image_cloud.h  frustum.h  grid.h  logic.cpp  logic.h  quad_screen.h  shader.h  texture.h  trajectory.h  utils.h
source/libraries/control_panel/platform/: CMakeLists.txt  window.h
source/libraries/control_panel/shaders/: car.fs  car.vs  depth_image_cloud.fs  depth_image_cloud.vs  frustum.fs  frustum.vs  grid.fs  grid.vs  quad_screen.fs  quad_screen.vs  trajectory.fs  trajectory.vs
source/libraries/navigation/: CMakeLists.txt  node_trajectory.h  trajectory_follower.h
source/libraries/network/: CMakeLists.txt  client.cpp  client.h  connection.cpp  connection.h  message.h  message_handler.h  message_transciever.cpp  message_transciever.h  messages.cpp  messages.h  server.cpp  server.h  socket_stream.h
source/libraries/remote/: CMakeLists.txt  message_handler.cpp  message_handler.h  robot.cpp  robot.h  system.cpp  system.h
source/libraries/robot/: CMakeLists.txt  arduino_driver.cpp  arduino_driver.h  arduino_message.h  arduino_socket.cpp  arduino_socket.h  message_handler.cpp  message_handler.h  remote.cpp  remote.h  robot_simulation.h
source/libraries/video/: CMakeLists.txt  frame_conversion.cpp  frame_conversion.h  frame_converter.cpp  frame_provider.h  image.cpp  image.h  image_conversion.cpp  video_cam.cpp  video_cam.h  video_file.cpp  video_file.h  video_reciever.cpp  video_reciever.h  video_transmitter.cpp  video_transmitter.h
source/motor_driver/: motor_driver.ino
source/project_main_controller/: CMakeLists.txt  main.cpp
source/project_main_controller/game/: logic.cpp  logic.h
source/project_main_controller/platform/: input.h
source/project_main_controller/robot/: CMakeLists.txt  remote.h
source/project_main_robot/: CMakeLists.txt  arduino.h  arduino_socket.cpp  arduino_socket.h  main.cpp
source/project_socket/: CMakeLists.txt  client.cpp  server.cpp  server_class.cpp
source/project_test/: CMakeLists.txt  main_client.cpp  main_server.cpp
source/project_test_socket/: CMakeLists.txt
source/project_test_texture/: main.cpp
source/project_test_video/game/: video_cam.h  video_file.cpp
source/project_test_video/platform/: window.h
source/project_texture/: CMakeLists.txt
source/project_texture/game/: CMakeLists.txt
source/project_texture/platform/: CMakeLists.txt  input.h
source/project_texture/shaders/: grass_v2.fs  quad_screen.fs  quad_screen.vs
source/project_texture/utils/: timer.h
source/project_video/: CMakeLists.txt  main.cpp
source/project_video/game/: CMakeLists.txt  frame_provider.cpp  frame_provider.h  logic.cpp  quad_screen.h  video_cam.cpp  video_cam.h  video_file.cpp  video_file.h
source/project_video/shaders/: grass_v2.vs  quad_screen.fs
source/project_video/utils/: CMakeLists.txt
source/projects/arduino_cli/: CMakeLists.txt  main.cpp
source/projects/controller/: CMakeLists.txt  main.cpp
source/projects/controller/control_panel/: CMakeLists.txt  control_panel.cpp  control_panel.h
source/projects/controller/control_panel/logic/: CMakeLists.txt  camera.h  logic.cpp  logic.h  quad_screen.h
source/projects/controller/control_panel/platform/: window.h
source/projects/controller_old/platform/: window.h
source/projects/engine/: CMakeLists.txt  arduino_socket.cpp  local.h  main.cpp
source/projects/hybrid/: CMakeLists.txt  main.cpp
source/projects/interface/game/: video_file.h
source/projects/project_test/: CMakeLists.txt  main_client.cpp
test/: CMakeLists.txt
test/inputs/: basic.csv
test/perf/: README.md
test/perf/depricated/: logger.py
test/perf/depricated/.config/procps/: toprc
test/performance/: README.md
test/prof/: README.md
test/profile/: README.md
test/unit/: CMakeLists.txt
test/unit/common/: CMakeLists.txt  test_logging.cpp  test_message.cpp  test_pose.cpp
test/unit/utils/: CMakeLists.txt  csv_test.cpp
test/unit/video/: CMakeLists.txt  test_image.cpp
