## Include Libraries
add_subdirectory(libraries/common)
add_subdirectory(libraries/remote)
add_subdirectory(libraries/robot)
add_subdirectory(libraries/video)

## Include Projects
# add_subdirectory(project_main_robot)
# add_subdirectory(project_main_controller)
# add_subdirectory(projects/project_test)
add_subdirectory(projects/controller)